force-app/main/default/objects/FEC_Content_History_Tracking__c/FEC_Content_History_Tracking__c.object-meta.xml
<CustomObject>
    <label>Content History Tracking</label>
    <nameField>
        <label>Content History Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content History Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>