force-app/main/default/objects/FEC_Content_History_Tracking__c/fields/FEC_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>