force-app/main/default/objects/FEC_Content_History_Tracking__c/fields/FEC_Merge_Fields_Used__c.field-meta.xml
<CustomField>
    <fullName>FEC_Merge_Fields_Used__c</fullName>
    <label>Merge Fields Used</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>