force-app/main/default/objects/FEC_Content_History_Tracking__c/fields/FEC_Original_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Value__c</fullName>
    <label>Original Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>