force-app/main/default/objects/FEC_Content_History_Tracking__c/fields/FEC_Template__c.field-meta.xml
<CustomField>
    <fullName>FEC_Template__c</fullName>
    <label>Template</label>
    <referenceTo>FEC_Template__c</referenceTo>
    <relationshipLabel>Content History Trackings</relationshipLabel>
    <relationshipName>Content_History_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>