force-app/main/default/objects/FEC_Content_History_Tracking__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Content_History_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>